# cookiecutter-pypackage-ai

./: .gitignore  README.md  context_hook.py  cookiecutter.json
hooks/: post_gen_project.py
llmgen/: llm.py  llm_context.py
llmgen/prompts/: fill-in-with-context.md
{{cookiecutter.project_slug}}/: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  setup.py
{{cookiecutter.project_slug}}/.github/workflows/: ci.yaml
{{cookiecutter.project_slug}}/tests/: conftest.py  requirements-dev.in  ruff.toml  test_main.py
